1.argsCheck